--- a/raytrace.vcxproj.filters
+++ b/raytrace.vcxproj.filters
@@ -28,6 +28,9 @@
     <None Include="data\scene.data">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="data\test.data">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
