--- a/raytrace.vcxproj
+++ b/raytrace.vcxproj
@@ -100,6 +100,7 @@
   <ItemGroup>
     <None Include="data\dflt.data" />
     <None Include="data\scene.data" />
+    <None Include="data\test.data" />
     <None Include="raylex.l" />
     <None Include="rayyacc.y" />
     <None Include="ReadMe.txt" />
