--- a/raytrace.vcxproj
+++ b/raytrace.vcxproj
@@ -62,6 +62,10 @@
       <Command>cd bin &amp;&amp; flex -o..\lex.yy.c ..\raylex.l &amp;&amp; bison -l -o ..\rayyacc.tab.c ..\rayyacc.y</Command>
       <Message>Flex &amp; Bison</Message>
     </PreBuildEvent>
+    <PostBuildEvent>
+      <Command>
+      </Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
