--- a/raytrace.vcxproj
+++ b/raytrace.vcxproj
@@ -115,9 +115,9 @@
     <ClInclude Include="Light.h" />
     <ClInclude Include="Objekt.h" />
     <ClInclude Include="Property.h" />
+    <ClInclude Include="QuadricObject.h" />
     <ClInclude Include="Ray.h" />
     <ClInclude Include="stdafx.h" />
-    <ClInclude Include="Surface.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Vector.h" />
   </ItemGroup>
@@ -127,6 +127,7 @@
     <ClCompile Include="Light.cpp" />
     <ClCompile Include="Objekt.cpp" />
     <ClCompile Include="Property.cpp" />
+    <ClCompile Include="QuadricObject.cpp" />
     <ClCompile Include="Ray.cpp" />
     <ClCompile Include="raytrace.cpp" />
     <ClCompile Include="rayyacc.tab.c">
@@ -137,7 +138,6 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="Surface.cpp" />
     <ClCompile Include="Vector.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
