--- a/raytrace.vcxproj.filters
+++ b/raytrace.vcxproj.filters
@@ -31,6 +31,9 @@
     <None Include="data\test.data">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="data\dof.data">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
